#40 fix : CORS 관련 설정 수정